@@ -266,7 +266,9 @@ test unixInit-2.9 {TclpInitLibraryPath: paths relative to executable} {unix noSp
     set x
 } [list /tmp/lib/tcl[info tclversion] /lib/tcl[info tclversion] \
         /tmp/library /library /tcl[info patchlevel]/library]
-test unixInit-3.1 {TclpSetInitialEncodings} {unixOnly stdio} {
+test unixInit-3.1 {TclpSetInitialEncodings} -constraints {
+	unixOnly stdio
+} -body {
     set env(LANG) C
 
     set f [open "|[list [interpreter]]" w+]
@@ -277,7 +279,7 @@ test unixInit-3.1 {TclpSetInitialEncodings} {unixOnly stdio} {
     unset env(LANG)
 
     set enc
-} {iso8859-1}
+} -match regexp -result ^iso8859-15?$
 test unixInit-3.2 {TclpSetInitialEncodings} {unixOnly stdio} {
     set env(LANG) japanese
     catch {set oldlc_all $env(LC_ALL)}
